--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -68,6 +68,7 @@
 \newcommand{\mbleto}{\rightsquigarrow_m}
 \newcommand{\drawsome}{{\sf Canvas}\xspace}
 \newcommand{\lang}{\lambda_b}
+\newcommand{\length}[1]{\left|#1\right|}
 
 % New colors
 %------------
