--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,4 +1,5 @@
 \section{Introduction}
+\label{sec:intro}
 
 Real-world distributed programs are challenging to write and maintain
 because they often conflate two distinct mechanisms.  The first
